# FACT-GAME

./: CMakeLists.txt  README  README.markdown  animate.cpp  animate.hpp  core.cpp  core.hpp  entity.cpp  entity.hpp  event.cpp  event.hpp  main.cpp  surface.cpp  surface.hpp
contrib/lib/: SDL.lib  SDL_image.lib  SDLmain.lib
